# DPA_C

Crypto Extra/: DPA Contest Tutorial2.docx
Crypto Extra/Sol/reference/: README.txt  constants.py  key_estimator.py  main.py  output0.txt  sbox_breaker.py  trace_loader.py  traces_database_bak.py
Crypto Extra/Sol/svn_codes/: README.txt
Crypto Extra/Sol/svn_codes/ches09/: constants.py  des_block.py  des_breaker.py  dsp.py  key_estimator_dpa.py  main.py  sbox_breaker.py  traces_database.py  traces_filesystem.py
Crypto Extra/Sol/svn_codes/clavier/: AllNames.txt.bz2  dpa_contest.fixed.1  dpa_contest.fixed.1.c  dpa_contest.fixed.1.log.bz2  dpa_contest.representative.1  dpa_contest.representative.1.c  dpa_contest.representative.1.log.bz2  input.txt.bz2  output.txt.bz2
Crypto Extra/Sol/svn_codes/deniau/: AUTHORS  BUGS  Makefile.am  Makefile.in  NEWS  NativeDes.i  aclocal.m4  autogen.sh  configure  configure.ac  des_block.cpp  des_block.h  des_sboxes.pl  trace.cpp  trace.h
Crypto Extra/Sol/svn_codes/deniau/src/: constants.py  des_block.py  des_breaker.py  key_estimator.py  key_estimator2.py  main.py  sbox_breaker.py  sbox_breaker2.py  testDealloc.py  traces_database.py
Crypto Extra/Sol/svn_codes/gierlichs/: agilent_bin_reader.c  computeRoundKey.m  convert_data_format.m  dpa_dom_DES_R16.m  dpa_ttest_DES_R16.m  filelist_dpa_ttest_382.txt  readme.txt  resultDPA4_dom.txt  result_DPA_ttest4bit.txt
Crypto Extra/Sol/svn_codes/guilley_cpa/: README.txt  constants.py
Crypto Extra/Sol/svn_codes/guilley_cpa_order_k4/: README.txt  key_estimator.py  kurtosis.py  main.py  traces_database.py
Crypto Extra/Sol/svn_codes/guilley_dpa/: README.txt  constants.py  key_estimator.py  main.py  sbox_breaker.py
Crypto Extra/Sol/svn_codes/hae-il/: README.txt  database_order.txt  main.c  make_target.c  make_target.h  output.txt  preprocess.c  preprocess.h  ref.h
Crypto Extra/Sol/svn_codes/kim/: 10000_csvfilenames.csv  (+18 more)
Crypto Extra/Sol/svn_codes/v2/reference/wrapper/: Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac
Crypto Extra/Sol/svn_codes/v2/reference/wrapper/examples/: attack.m  attack_last_round_python.py  dpa_contest.py
Crypto Extra/Sol/svn_codes/v2/reference/wrapper/src/: Makefile.am  Makefile.in  aes.c  aes.h  attack_wrapper.c  compute_results.c  db_postgresql.c  db_postgresql.h  dpa_contest_results.h  trace_files.c  trace_files.h  utils.c  utils.h
guilley_cpa/: constants.py  key_estimator.py  kurtosis.py  main.py  output0.txt  sbox_breaker.py  trace_loader.py  traces_database.py
guilley_dpa/: des_breaker.py  main.py  output0.txt  trace_loader.py
reference/: key_estimator.py  main.py  output.csv  output0.txt  t.py  trace_loader.py
(+169 files in other folders)
